--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,22 @@
 body {
-  background-color: #333;
+  background-image: linear-gradient(to bottom, #333, #424242);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 100%;
+  min-height: 700px;
 }
 
 .card {
-  border: 1px solid yellow;
+  border: 1px solid rgba(0, 0, 0, .125);
+  background: linear-gradient(to bottom, #333, #424242);
+  box-shadow: 0px 0px 5px rgb(0, 0, 0.5);  
+}
+
+.card-title {
+  color: yellow;
+  text-shadow: 0px 2.5px 5px #000;
+
 }
 
 .btn-primary {
@@ -11,9 +24,18 @@ body {
   border-color: #333;
 }
 
-.header{
+.btnRandomMovie{
+  cursor: pointer;
+}
+
+.btnRandomMovie:hover{
+  background-color: #424242;
+}
+
+.header {
   color: yellow;
   outline: 1px solid yellow;
+  text-shadow: 0px 10px 10px #000;
 }
 
 .btn-primary:hover .food-icon {
@@ -22,26 +44,32 @@ body {
 
 @keyframes floating {
   0% {
-      transform: translateY(0);
+    transform: translateY(0);
   }
+
   50% {
-      transform: translateY(-5px);
+    transform: translateY(-5px);
   }
+
   100% {
-      transform: translateY(0);
+    transform: translateY(0);
   }
 }
 
 #moviePoster {
   max-width: 200px;
   max-height: 500px;
-  border: 5px solid yellow; /* Adicione uma borda */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Adicione uma sombra */
-  transition: transform 0.3s ease-in-out; /* Adicione uma transição suave */
+  border: 5px solid yellow;
+  /* Adicione uma borda */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  /* Adicione uma sombra */
+  transition: transform 0.3s ease-in-out;
+  /* Adicione uma transição suave */
 }
 
 #moviePoster:hover {
-  transform: scale(1.05); /* Aumenta ligeiramente o tamanho do pôster ao passar o mouse */
+  transform: scale(1.05);
+  /* Aumenta ligeiramente o tamanho do pôster ao passar o mouse */
 }
 
 #loading {
@@ -80,9 +108,10 @@ body {
 
 @keyframes spin {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
+
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
